<resources>
    <string name="app_name">layouts04</string>
    <string name="topRight">top right</string>
    <string name="botLeft">bot left</string>
    <string name="botRight">bot right</string>
    <string name="topLeft">top left</string>
    <string name="click_button">CLICK</string>
    <string name="botCenter">bot center</string>
    <string name="topCenter">top center</string>
    <string name="button1">demo 1</string>
    <string name="button2">demo 2</string>
    <string name="middle">middle</string>
    <string name="down">down</string>
    <string name="button3">demo 3</string>
    <string name="text1">These</string>
    <string name="text2">\n \n \n \n \n are</string>
    <string name="text4">\n \n \n text views</string>
    <string name="text3">\n \n overlapping</string>
    <string name="button4">demo 4</string>
    <string name="button5">demo 5</string>
    <string name="really_long_string">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Non quam lacus suspendisse faucibus interdum. Et netus et malesuada fames ac turpis egestas integer eget. Faucibus pulvinar elementum integer enim neque volutpat ac. Tellus id interdum velit laoreet id donec ultrices tincidunt. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Nunc vel risus commodo viverra maecenas. Interdum varius sit amet mattis. Volutpat commodo sed egestas egestas fringilla phasellus. Amet mattis vulputate enim nulla aliquet porttitor lacus. Sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Sed adipiscing diam donec adipiscing. Adipiscing commodo elit at imperdiet dui accumsan. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.

Elementum pulvinar etiam non quam lacus. Pharetra et ultrices neque ornare aenean euismod elementum nisi quis. Diam donec adipiscing tristique risus nec feugiat in fermentum. Amet massa vitae tortor condimentum lacinia quis vel eros. Semper feugiat nibh sed pulvinar. Suspendisse faucibus interdum posuere lorem. Nam aliquam sem et tortor. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Tortor posuere ac ut consequat semper. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Vel quam elementum pulvinar etiam non. Proin sed libero enim sed faucibus. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus iaculis. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Ullamcorper sit amet risus nullam. In est ante in nibh mauris cursus.

Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Tempus quam pellentesque nec nam aliquam sem et. Aliquam id diam maecenas ultricies. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget. Non tellus orci ac auctor. Elit eget gravida cum sociis natoque penatibus et magnis dis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Natoque penatibus et magnis dis parturient. Vitae purus faucibus ornare suspendisse. Tellus in metus vulputate eu scelerisque felis imperdiet proin. In ornare quam viverra orci sagittis. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Vulputate ut pharetra sit amet aliquam id diam maecenas. Risus in hendrerit gravida rutrum quisque non tellus. Pellentesque id nibh tortor id aliquet. Tellus mauris a diam maecenas sed. Non sodales neque sodales ut etiam.

Tortor dignissim convallis aenean et. Velit egestas dui id ornare arcu odio ut sem nulla. Sed felis eget velit aliquet sagittis id consectetur purus. Elementum curabitur vitae nunc sed velit dignissim sodales. Ut sem viverra aliquet eget sit amet. Magna sit amet purus gravida. Lacus vel facilisis volutpat est velit. Pretium lectus quam id leo. Lacus vel facilisis volutpat est velit egestas dui id ornare. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit.

Commodo nulla facilisi nullam vehicula ipsum a arcu. Felis eget velit aliquet sagittis id consectetur purus ut. Purus sit amet volutpat consequat mauris nunc congue nisi vitae. Venenatis urna cursus eget nunc scelerisque viverra. Venenatis a condimentum vitae sapien pellentesque habitant. Viverra nam libero justo laoreet sit amet cursus. Libero justo laoreet sit amet cursus sit amet dictum sit. Et malesuada fames ac turpis egestas. Tristique risus nec feugiat in. Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque elit. Tortor consequat id porta nibh venenatis cras.
    </string>
    <string name="button6">demo 6</string>
    <string name="exclaim_button">!</string>
    <string name="six_button">6</string>
    <string name="layout_button">layout</string>
    <string name="is_button">is</string>
    <string name="this_button">this</string>
    <string name="hi_button">hi</string>
    <string name="three_button">three</string>
    <string name="filler_button">filler</string>
    <string name="button7">demo 7</string>
    <string name="questionL7">have you seen these words in my other demos?</string>
</resources>
