<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout2">
    <TextView
        android:id="@+id/topLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topLeft"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/topCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topCenter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/botCenter"
        app:layout_constraintRight_toLeftOf="@+id/botCenter"
        />
    <TextView
        android:id="@+id/botCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botCenter"
        android:textSize="24sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>