<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout4">
    <TextView
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topLeft"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#9FDAF7"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verticalGuideline"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline"
        app:layout_constraintGuide_percent="0.18"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline1"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline2"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline3"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="#D7D2D1"
        android:text="@string/text2"

        app:layout_constraintTop_toBottomOf="@+id/horizGuideline"
        app:layout_constraintLeft_toRightOf="@+id/verticalGuideline"
       />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="#000"
        android:text="@string/text1"
        android:textColor="#fff"


        app:layout_constraintTop_toTopOf="@+id/horizGuideline1"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="#9FDAF7"
        android:text="@string/text3"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline2"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGuideline"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="115dp"
        android:background="#D7D2D1"
        android:text="@string/text4"
        android:textSize="12dp"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline3"
        app:layout_constraintRight_toRightOf="@+id/verticalGuideline"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        tools:layout_editor_absoluteX="123dp" />


</androidx.constraintlayout.widget.ConstraintLayout>