<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout3">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verticalGuideline"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline1"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizGuideline2"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="horizontal"/>
    <TextView
        android:id="@+id/topLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topCenter"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/verticalGuideline"
        app:layout_constraintBottom_toTopOf="@+id/clickButton"
        />
    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toRightOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizGuideline1"
        />

    <TextView
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline1"
        app:layout_constraintBottom_toBottomOf="@+id/horizGuideline1"

        />

</androidx.constraintlayout.widget.ConstraintLayout>